[project]
name = "caching-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "redis[hiredis]>=6.4.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
caching-proxy = "cli:main" 
